Projeto/sin/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program_heading ; block .
Rule 2     program_heading -> PROGRAM ID ( id_list )
Rule 3     program_heading -> PROGRAM ID
Rule 4     block -> const_def_part proc_func_dec_part var_dec_part compound_statement
Rule 5     const_def_part -> <empty>
Rule 6     const_def_part -> CONST const_def ; ccont
Rule 7     ccont -> <empty>
Rule 8     ccont -> const_def ; ccont
Rule 9     var_dec_part -> <empty>
Rule 10    var_dec_part -> VAR var_dec ; vcont
Rule 11    vcont -> <empty>
Rule 12    vcont -> var_dec ; vcont
Rule 13    proc_func_dec_part -> <empty>
Rule 14    proc_func_dec_part -> proc_func_dec_part proc_dec ;
Rule 15    proc_func_dec_part -> proc_func_dec_part func_dec ;
Rule 16    const_def -> ID = constant
Rule 17    sign -> +
Rule 18    sign -> -
Rule 19    constant -> sign INT
Rule 20    constant -> INT
Rule 21    constant -> sign REAL
Rule 22    constant -> REAL
Rule 23    constant -> ID
Rule 24    constant -> sign ID
Rule 25    constant -> CHAR
Rule 26    constant -> STRING
Rule 27    tipo -> ID
Rule 28    tipo -> new_type
Rule 29    new_type -> enumerated_type
Rule 30    new_type -> subrange_type
Rule 31    new_type -> array_type
Rule 32    enumerated_type -> ( id_list )
Rule 33    id_list -> ID
Rule 34    id_list -> ID , id_list
Rule 35    subrange_type -> constant DOTDOT constant
Rule 36    array_type -> ARRAY [ ordinal_type acont ] OF tipo
Rule 37    acont -> <empty>
Rule 38    acont -> , ordinal_type acont
Rule 39    ordinal_type -> enumerated_type
Rule 40    ordinal_type -> subrange_type
Rule 41    ordinal_type -> ID
Rule 42    var_dec -> id_list : tipo
Rule 43    var_access -> ID
Rule 44    var_access -> var_access [ expr expr_sequence ]
Rule 45    expr_sequence -> <empty>
Rule 46    expr_sequence -> , expr expr_sequence
Rule 47    expr -> simple_expr
Rule 48    expr -> simple_expr relation_op simple_expr
Rule 49    simple_expr -> term term_sequence
Rule 50    simple_expr -> sign term term_sequence
Rule 51    term -> factor factor_sequence
Rule 52    term_sequence -> <empty>
Rule 53    term_sequence -> add_op term term_sequence
Rule 54    factor -> var_access
Rule 55    factor -> INT
Rule 56    factor -> REAL
Rule 57    factor -> CHAR
Rule 58    factor -> STRING
Rule 59    factor -> ID actual_param_list
Rule 60    factor -> ( expr )
Rule 61    factor -> NOT factor
Rule 62    factor_sequence -> <empty>
Rule 63    factor_sequence -> mul_op factor factor_sequence
Rule 64    add_op -> +
Rule 65    add_op -> -
Rule 66    add_op -> OR
Rule 67    mul_op -> *
Rule 68    mul_op -> /
Rule 69    mul_op -> DIV
Rule 70    mul_op -> MOD
Rule 71    mul_op -> AND
Rule 72    relation_op -> =
Rule 73    relation_op -> NE
Rule 74    relation_op -> <
Rule 75    relation_op -> >
Rule 76    relation_op -> LE
Rule 77    relation_op -> GE
Rule 78    compound_statement -> BEGIN statement statement_sequence END
Rule 79    statement_sequence -> <empty>
Rule 80    statement_sequence -> ; statement statement_sequence
Rule 81    statement -> simple_statement
Rule 82    statement -> structured_statement
Rule 83    statement -> labeled_statement
Rule 84    labeled_statement -> INT : statement
Rule 85    simple_statement -> <empty>
Rule 86    simple_statement -> assignment_statement
Rule 87    simple_statement -> proc_statement
Rule 88    simple_statement -> read_statement
Rule 89    simple_statement -> write_statement
Rule 90    read_statement -> READ read_param_list
Rule 91    read_statement -> READLN
Rule 92    read_statement -> READLN read_param_list
Rule 93    write_statement -> WRITE writeln_param_list
Rule 94    write_statement -> WRITELN
Rule 95    write_statement -> WRITELN writeln_param_list
Rule 96    assignment_statement -> var_access ASSIGN expr
Rule 97    proc_statement -> ID proc_id_cont
Rule 98    proc_id_cont -> <empty>
Rule 99    proc_id_cont -> actual_param_list
Rule 100   actual_param_list -> ( expr expr_sequence )
Rule 101   read_param_list -> ( var_access var_access_sequence )
Rule 102   var_access_sequence -> <empty>
Rule 103   var_access_sequence -> , var_access var_access_sequence
Rule 104   write_param_sequence -> <empty>
Rule 105   write_param_sequence -> , write_param write_param_sequence
Rule 106   write_param -> expr
Rule 107   write_param -> expr : expr
Rule 108   write_param -> expr : expr : expr
Rule 109   writeln_param_list -> ( write_param write_param_sequence )
Rule 110   structured_statement -> compound_statement
Rule 111   structured_statement -> if_statement
Rule 112   structured_statement -> while_statement
Rule 113   structured_statement -> for_statement
Rule 114   if_statement -> IF expr THEN statement
Rule 115   if_statement -> IF expr THEN statement ELSE statement
Rule 116   while_statement -> WHILE expr DO statement
Rule 117   for_statement -> FOR ID ASSIGN expr TO expr DO statement
Rule 118   for_statement -> FOR ID ASSIGN expr DOWNTO expr DO statement
Rule 119   proc_dec -> proc_heading ; block
Rule 120   proc_dec -> PROCEDURE ID ; block
Rule 121   proc_heading -> PROCEDURE ID
Rule 122   proc_heading -> PROCEDURE ID formal_param_list
Rule 123   func_dec -> FUNCTION ID ; block
Rule 124   func_dec -> func_heading ; block
Rule 125   func_heading -> FUNCTION ID : ID
Rule 126   func_heading -> FUNCTION ID formal_param_list : ID
Rule 127   formal_param_list -> ( formal_param_section fcont )
Rule 128   fcont -> <empty>
Rule 129   fcont -> ; formal_param_section fcont
Rule 130   formal_param_section -> id_list : ID
Rule 131   formal_param_section -> VAR id_list : ID
Rule 132   formal_param_section -> proc_heading
Rule 133   formal_param_section -> func_heading

Terminals, with rules where they appear

(                    : 2 32 60 100 101 109 127
)                    : 2 32 60 100 101 109 127
*                    : 67
+                    : 17 64
,                    : 34 38 46 103 105
-                    : 18 65
.                    : 1
/                    : 68
:                    : 42 84 107 108 108 125 126 130 131
;                    : 1 6 8 10 12 14 15 80 119 120 123 124 129
<                    : 74
=                    : 16 72
>                    : 75
AND                  : 71
ARRAY                : 36
ASSIGN               : 96 117 118
BEGIN                : 78
CHAR                 : 25 57
CONST                : 6
DIV                  : 69
DO                   : 116 117 118
DOTDOT               : 35
DOWNTO               : 118
ELSE                 : 115
END                  : 78
FOR                  : 117 118
FUNCTION             : 123 125 126
GE                   : 77
ID                   : 2 3 16 23 24 27 33 34 41 43 59 97 117 118 120 121 122 123 125 125 126 126 130 131
IF                   : 114 115
INT                  : 19 20 55 84
LE                   : 76
MOD                  : 70
NE                   : 73
NOT                  : 61
OF                   : 36
OR                   : 66
PROCEDURE            : 120 121 122
PROGRAM              : 2 3
READ                 : 90
READLN               : 91 92
REAL                 : 21 22 56
STRING               : 26 58
THEN                 : 114 115
TO                   : 117
VAR                  : 10 131
WHILE                : 116
WRITE                : 93
WRITELN              : 94 95
[                    : 36 44
]                    : 36 44
error                : 

Nonterminals, with rules where they appear

acont                : 36 38
actual_param_list    : 59 99
add_op               : 53
array_type           : 31
assignment_statement : 86
block                : 1 119 120 123 124
ccont                : 6 8
compound_statement   : 4 110
const_def            : 6 8
const_def_part       : 4
constant             : 16 35 35
enumerated_type      : 29 39
expr                 : 44 46 60 96 100 106 107 107 108 108 108 114 115 116 117 117 118 118
expr_sequence        : 44 46 100
factor               : 51 61 63
factor_sequence      : 51 63
fcont                : 127 129
for_statement        : 113
formal_param_list    : 122 126
formal_param_section : 127 129
func_dec             : 15
func_heading         : 124 133
id_list              : 2 32 34 42 130 131
if_statement         : 111
labeled_statement    : 83
mul_op               : 63
new_type             : 28
ordinal_type         : 36 38
proc_dec             : 14
proc_func_dec_part   : 4 14 15
proc_heading         : 119 132
proc_id_cont         : 97
proc_statement       : 87
program              : 0
program_heading      : 1
read_param_list      : 90 92
read_statement       : 88
relation_op          : 48
sign                 : 19 21 24 50
simple_expr          : 47 48 48
simple_statement     : 81
statement            : 78 80 84 114 115 115 116 117 118
statement_sequence   : 78 80
structured_statement : 82
subrange_type        : 30 40
term                 : 49 50 53
term_sequence        : 49 50 53
tipo                 : 36 42
var_access           : 44 54 96 101 103
var_access_sequence  : 101 103
var_dec              : 10 12
var_dec_part         : 4
vcont                : 10 12
while_statement      : 112
write_param          : 105 109
write_param_sequence : 105 109
write_statement      : 89
writeln_param_list   : 93 95

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_heading ; block .
    (2) program_heading -> . PROGRAM ID ( id_list )
    (3) program_heading -> . PROGRAM ID

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    program_heading                shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> program_heading . ; block .

    ;               shift and go to state 4


state 3

    (2) program_heading -> PROGRAM . ID ( id_list )
    (3) program_heading -> PROGRAM . ID

    ID              shift and go to state 5


state 4

    (1) program -> program_heading ; . block .
    (4) block -> . const_def_part proc_func_dec_part var_dec_part compound_statement
    (5) const_def_part -> .
    (6) const_def_part -> . CONST const_def ; ccont

    VAR             reduce using rule 5 (const_def_part -> .)
    PROCEDURE       reduce using rule 5 (const_def_part -> .)
    FUNCTION        reduce using rule 5 (const_def_part -> .)
    BEGIN           reduce using rule 5 (const_def_part -> .)
    CONST           shift and go to state 8

    block                          shift and go to state 6
    const_def_part                 shift and go to state 7

state 5

    (2) program_heading -> PROGRAM ID . ( id_list )
    (3) program_heading -> PROGRAM ID .

    (               shift and go to state 9
    ;               reduce using rule 3 (program_heading -> PROGRAM ID .)


state 6

    (1) program -> program_heading ; block . .

    .               shift and go to state 10


state 7

    (4) block -> const_def_part . proc_func_dec_part var_dec_part compound_statement
    (13) proc_func_dec_part -> .
    (14) proc_func_dec_part -> . proc_func_dec_part proc_dec ;
    (15) proc_func_dec_part -> . proc_func_dec_part func_dec ;

    VAR             reduce using rule 13 (proc_func_dec_part -> .)
    PROCEDURE       reduce using rule 13 (proc_func_dec_part -> .)
    FUNCTION        reduce using rule 13 (proc_func_dec_part -> .)
    BEGIN           reduce using rule 13 (proc_func_dec_part -> .)

    proc_func_dec_part             shift and go to state 11

state 8

    (6) const_def_part -> CONST . const_def ; ccont
    (16) const_def -> . ID = constant

    ID              shift and go to state 13

    const_def                      shift and go to state 12

state 9

    (2) program_heading -> PROGRAM ID ( . id_list )
    (33) id_list -> . ID
    (34) id_list -> . ID , id_list

    ID              shift and go to state 14

    id_list                        shift and go to state 15

state 10

    (1) program -> program_heading ; block . .

    $end            reduce using rule 1 (program -> program_heading ; block . .)


state 11

    (4) block -> const_def_part proc_func_dec_part . var_dec_part compound_statement
    (14) proc_func_dec_part -> proc_func_dec_part . proc_dec ;
    (15) proc_func_dec_part -> proc_func_dec_part . func_dec ;
    (9) var_dec_part -> .
    (10) var_dec_part -> . VAR var_dec ; vcont
    (119) proc_dec -> . proc_heading ; block
    (120) proc_dec -> . PROCEDURE ID ; block
    (123) func_dec -> . FUNCTION ID ; block
    (124) func_dec -> . func_heading ; block
    (121) proc_heading -> . PROCEDURE ID
    (122) proc_heading -> . PROCEDURE ID formal_param_list
    (125) func_heading -> . FUNCTION ID : ID
    (126) func_heading -> . FUNCTION ID formal_param_list : ID

    BEGIN           reduce using rule 9 (var_dec_part -> .)
    VAR             shift and go to state 19
    PROCEDURE       shift and go to state 21
    FUNCTION        shift and go to state 22

    var_dec_part                   shift and go to state 16
    proc_dec                       shift and go to state 17
    func_dec                       shift and go to state 18
    proc_heading                   shift and go to state 20
    func_heading                   shift and go to state 23

state 12

    (6) const_def_part -> CONST const_def . ; ccont

    ;               shift and go to state 24


state 13

    (16) const_def -> ID . = constant

    =               shift and go to state 25


state 14

    (33) id_list -> ID .
    (34) id_list -> ID . , id_list

    )               reduce using rule 33 (id_list -> ID .)
    :               reduce using rule 33 (id_list -> ID .)
    ,               shift and go to state 26


state 15

    (2) program_heading -> PROGRAM ID ( id_list . )

    )               shift and go to state 27


state 16

    (4) block -> const_def_part proc_func_dec_part var_dec_part . compound_statement
    (78) compound_statement -> . BEGIN statement statement_sequence END

    BEGIN           shift and go to state 29

    compound_statement             shift and go to state 28

state 17

    (14) proc_func_dec_part -> proc_func_dec_part proc_dec . ;

    ;               shift and go to state 30


state 18

    (15) proc_func_dec_part -> proc_func_dec_part func_dec . ;

    ;               shift and go to state 31


state 19

    (10) var_dec_part -> VAR . var_dec ; vcont
    (42) var_dec -> . id_list : tipo
    (33) id_list -> . ID
    (34) id_list -> . ID , id_list

    ID              shift and go to state 14

    var_dec                        shift and go to state 32
    id_list                        shift and go to state 33

state 20

    (119) proc_dec -> proc_heading . ; block

    ;               shift and go to state 34


state 21

    (120) proc_dec -> PROCEDURE . ID ; block
    (121) proc_heading -> PROCEDURE . ID
    (122) proc_heading -> PROCEDURE . ID formal_param_list

    ID              shift and go to state 35


state 22

    (123) func_dec -> FUNCTION . ID ; block
    (125) func_heading -> FUNCTION . ID : ID
    (126) func_heading -> FUNCTION . ID formal_param_list : ID

    ID              shift and go to state 36


state 23

    (124) func_dec -> func_heading . ; block

    ;               shift and go to state 37


state 24

    (6) const_def_part -> CONST const_def ; . ccont
    (7) ccont -> .
    (8) ccont -> . const_def ; ccont
    (16) const_def -> . ID = constant

    VAR             reduce using rule 7 (ccont -> .)
    PROCEDURE       reduce using rule 7 (ccont -> .)
    FUNCTION        reduce using rule 7 (ccont -> .)
    BEGIN           reduce using rule 7 (ccont -> .)
    ID              shift and go to state 13

    const_def                      shift and go to state 38
    ccont                          shift and go to state 39

state 25

    (16) const_def -> ID = . constant
    (19) constant -> . sign INT
    (20) constant -> . INT
    (21) constant -> . sign REAL
    (22) constant -> . REAL
    (23) constant -> . ID
    (24) constant -> . sign ID
    (25) constant -> . CHAR
    (26) constant -> . STRING
    (17) sign -> . +
    (18) sign -> . -

    INT             shift and go to state 43
    REAL            shift and go to state 44
    ID              shift and go to state 40
    CHAR            shift and go to state 45
    STRING          shift and go to state 46
    +               shift and go to state 47
    -               shift and go to state 48

    constant                       shift and go to state 41
    sign                           shift and go to state 42

state 26

    (34) id_list -> ID , . id_list
    (33) id_list -> . ID
    (34) id_list -> . ID , id_list

    ID              shift and go to state 14

    id_list                        shift and go to state 49

state 27

    (2) program_heading -> PROGRAM ID ( id_list ) .

    ;               reduce using rule 2 (program_heading -> PROGRAM ID ( id_list ) .)


state 28

    (4) block -> const_def_part proc_func_dec_part var_dec_part compound_statement .

    .               reduce using rule 4 (block -> const_def_part proc_func_dec_part var_dec_part compound_statement .)
    ;               reduce using rule 4 (block -> const_def_part proc_func_dec_part var_dec_part compound_statement .)


state 29

    (78) compound_statement -> BEGIN . statement statement_sequence END
    (81) statement -> . simple_statement
    (82) statement -> . structured_statement
    (83) statement -> . labeled_statement
    (85) simple_statement -> .
    (86) simple_statement -> . assignment_statement
    (87) simple_statement -> . proc_statement
    (88) simple_statement -> . read_statement
    (89) simple_statement -> . write_statement
    (110) structured_statement -> . compound_statement
    (111) structured_statement -> . if_statement
    (112) structured_statement -> . while_statement
    (113) structured_statement -> . for_statement
    (84) labeled_statement -> . INT : statement
    (96) assignment_statement -> . var_access ASSIGN expr
    (97) proc_statement -> . ID proc_id_cont
    (90) read_statement -> . READ read_param_list
    (91) read_statement -> . READLN
    (92) read_statement -> . READLN read_param_list
    (93) write_statement -> . WRITE writeln_param_list
    (94) write_statement -> . WRITELN
    (95) write_statement -> . WRITELN writeln_param_list
    (78) compound_statement -> . BEGIN statement statement_sequence END
    (114) if_statement -> . IF expr THEN statement
    (115) if_statement -> . IF expr THEN statement ELSE statement
    (116) while_statement -> . WHILE expr DO statement
    (117) for_statement -> . FOR ID ASSIGN expr TO expr DO statement
    (118) for_statement -> . FOR ID ASSIGN expr DOWNTO expr DO statement
    (43) var_access -> . ID
    (44) var_access -> . var_access [ expr expr_sequence ]

    ;               reduce using rule 85 (simple_statement -> .)
    END             reduce using rule 85 (simple_statement -> .)
    INT             shift and go to state 62
    ID              shift and go to state 64
    READ            shift and go to state 65
    READLN          shift and go to state 66
    WRITE           shift and go to state 67
    WRITELN         shift and go to state 68
    BEGIN           shift and go to state 29
    IF              shift and go to state 69
    WHILE           shift and go to state 70
    FOR             shift and go to state 71

    statement                      shift and go to state 50
    simple_statement               shift and go to state 51
    structured_statement           shift and go to state 52
    labeled_statement              shift and go to state 53
    assignment_statement           shift and go to state 54
    proc_statement                 shift and go to state 55
    read_statement                 shift and go to state 56
    write_statement                shift and go to state 57
    compound_statement             shift and go to state 58
    if_statement                   shift and go to state 59
    while_statement                shift and go to state 60
    for_statement                  shift and go to state 61
    var_access                     shift and go to state 63

state 30

    (14) proc_func_dec_part -> proc_func_dec_part proc_dec ; .

    VAR             reduce using rule 14 (proc_func_dec_part -> proc_func_dec_part proc_dec ; .)
    PROCEDURE       reduce using rule 14 (proc_func_dec_part -> proc_func_dec_part proc_dec ; .)
    FUNCTION        reduce using rule 14 (proc_func_dec_part -> proc_func_dec_part proc_dec ; .)
    BEGIN           reduce using rule 14 (proc_func_dec_part -> proc_func_dec_part proc_dec ; .)


state 31

    (15) proc_func_dec_part -> proc_func_dec_part func_dec ; .

    VAR             reduce using rule 15 (proc_func_dec_part -> proc_func_dec_part func_dec ; .)
    PROCEDURE       reduce using rule 15 (proc_func_dec_part -> proc_func_dec_part func_dec ; .)
    FUNCTION        reduce using rule 15 (proc_func_dec_part -> proc_func_dec_part func_dec ; .)
    BEGIN           reduce using rule 15 (proc_func_dec_part -> proc_func_dec_part func_dec ; .)


state 32

    (10) var_dec_part -> VAR var_dec . ; vcont

    ;               shift and go to state 72


state 33

    (42) var_dec -> id_list . : tipo

    :               shift and go to state 73


state 34

    (119) proc_dec -> proc_heading ; . block
    (4) block -> . const_def_part proc_func_dec_part var_dec_part compound_statement
    (5) const_def_part -> .
    (6) const_def_part -> . CONST const_def ; ccont

    VAR             reduce using rule 5 (const_def_part -> .)
    PROCEDURE       reduce using rule 5 (const_def_part -> .)
    FUNCTION        reduce using rule 5 (const_def_part -> .)
    BEGIN           reduce using rule 5 (const_def_part -> .)
    CONST           shift and go to state 8

    block                          shift and go to state 74
    const_def_part                 shift and go to state 7

state 35

    (120) proc_dec -> PROCEDURE ID . ; block
    (121) proc_heading -> PROCEDURE ID .
    (122) proc_heading -> PROCEDURE ID . formal_param_list
    (127) formal_param_list -> . ( formal_param_section fcont )

  ! shift/reduce conflict for ; resolved as shift
    ;               shift and go to state 75
    (               shift and go to state 77

  ! ;               [ reduce using rule 121 (proc_heading -> PROCEDURE ID .) ]

    formal_param_list              shift and go to state 76

state 36

    (123) func_dec -> FUNCTION ID . ; block
    (125) func_heading -> FUNCTION ID . : ID
    (126) func_heading -> FUNCTION ID . formal_param_list : ID
    (127) formal_param_list -> . ( formal_param_section fcont )

    ;               shift and go to state 78
    :               shift and go to state 79
    (               shift and go to state 77

    formal_param_list              shift and go to state 80

state 37

    (124) func_dec -> func_heading ; . block
    (4) block -> . const_def_part proc_func_dec_part var_dec_part compound_statement
    (5) const_def_part -> .
    (6) const_def_part -> . CONST const_def ; ccont

    VAR             reduce using rule 5 (const_def_part -> .)
    PROCEDURE       reduce using rule 5 (const_def_part -> .)
    FUNCTION        reduce using rule 5 (const_def_part -> .)
    BEGIN           reduce using rule 5 (const_def_part -> .)
    CONST           shift and go to state 8

    block                          shift and go to state 81
    const_def_part                 shift and go to state 7

state 38

    (8) ccont -> const_def . ; ccont

    ;               shift and go to state 82


state 39

    (6) const_def_part -> CONST const_def ; ccont .

    VAR             reduce using rule 6 (const_def_part -> CONST const_def ; ccont .)
    PROCEDURE       reduce using rule 6 (const_def_part -> CONST const_def ; ccont .)
    FUNCTION        reduce using rule 6 (const_def_part -> CONST const_def ; ccont .)
    BEGIN           reduce using rule 6 (const_def_part -> CONST const_def ; ccont .)


state 40

    (23) constant -> ID .

    ;               reduce using rule 23 (constant -> ID .)
    ,               reduce using rule 23 (constant -> ID .)
    ]               reduce using rule 23 (constant -> ID .)


state 41

    (16) const_def -> ID = constant .

    ;               reduce using rule 16 (const_def -> ID = constant .)


state 42

    (19) constant -> sign . INT
    (21) constant -> sign . REAL
    (24) constant -> sign . ID

    INT             shift and go to state 83
    REAL            shift and go to state 84
    ID              shift and go to state 85


state 43

    (20) constant -> INT .

    ;               reduce using rule 20 (constant -> INT .)
    DOTDOT          reduce using rule 20 (constant -> INT .)
    ,               reduce using rule 20 (constant -> INT .)
    ]               reduce using rule 20 (constant -> INT .)


state 44

    (22) constant -> REAL .

    ;               reduce using rule 22 (constant -> REAL .)
    DOTDOT          reduce using rule 22 (constant -> REAL .)
    ,               reduce using rule 22 (constant -> REAL .)
    ]               reduce using rule 22 (constant -> REAL .)


state 45

    (25) constant -> CHAR .

    ;               reduce using rule 25 (constant -> CHAR .)
    DOTDOT          reduce using rule 25 (constant -> CHAR .)
    ,               reduce using rule 25 (constant -> CHAR .)
    ]               reduce using rule 25 (constant -> CHAR .)


state 46

    (26) constant -> STRING .

    ;               reduce using rule 26 (constant -> STRING .)
    DOTDOT          reduce using rule 26 (constant -> STRING .)
    ,               reduce using rule 26 (constant -> STRING .)
    ]               reduce using rule 26 (constant -> STRING .)


state 47

    (17) sign -> + .

    INT             reduce using rule 17 (sign -> + .)
    REAL            reduce using rule 17 (sign -> + .)
    ID              reduce using rule 17 (sign -> + .)
    CHAR            reduce using rule 17 (sign -> + .)
    STRING          reduce using rule 17 (sign -> + .)
    (               reduce using rule 17 (sign -> + .)
    NOT             reduce using rule 17 (sign -> + .)


state 48

    (18) sign -> - .

    INT             reduce using rule 18 (sign -> - .)
    REAL            reduce using rule 18 (sign -> - .)
    ID              reduce using rule 18 (sign -> - .)
    CHAR            reduce using rule 18 (sign -> - .)
    STRING          reduce using rule 18 (sign -> - .)
    (               reduce using rule 18 (sign -> - .)
    NOT             reduce using rule 18 (sign -> - .)


state 49

    (34) id_list -> ID , id_list .

    )               reduce using rule 34 (id_list -> ID , id_list .)
    :               reduce using rule 34 (id_list -> ID , id_list .)


state 50

    (78) compound_statement -> BEGIN statement . statement_sequence END
    (79) statement_sequence -> .
    (80) statement_sequence -> . ; statement statement_sequence

    END             reduce using rule 79 (statement_sequence -> .)
    ;               shift and go to state 87

    statement_sequence             shift and go to state 86

state 51

    (81) statement -> simple_statement .

    ;               reduce using rule 81 (statement -> simple_statement .)
    END             reduce using rule 81 (statement -> simple_statement .)
    ELSE            reduce using rule 81 (statement -> simple_statement .)


state 52

    (82) statement -> structured_statement .

    ;               reduce using rule 82 (statement -> structured_statement .)
    END             reduce using rule 82 (statement -> structured_statement .)
    ELSE            reduce using rule 82 (statement -> structured_statement .)


state 53

    (83) statement -> labeled_statement .

    ;               reduce using rule 83 (statement -> labeled_statement .)
    END             reduce using rule 83 (statement -> labeled_statement .)
    ELSE            reduce using rule 83 (statement -> labeled_statement .)


state 54

    (86) simple_statement -> assignment_statement .

    ;               reduce using rule 86 (simple_statement -> assignment_statement .)
    END             reduce using rule 86 (simple_statement -> assignment_statement .)
    ELSE            reduce using rule 86 (simple_statement -> assignment_statement .)


state 55

    (87) simple_statement -> proc_statement .

    ;               reduce using rule 87 (simple_statement -> proc_statement .)
    END             reduce using rule 87 (simple_statement -> proc_statement .)
    ELSE            reduce using rule 87 (simple_statement -> proc_statement .)


state 56

    (88) simple_statement -> read_statement .

    ;               reduce using rule 88 (simple_statement -> read_statement .)
    END             reduce using rule 88 (simple_statement -> read_statement .)
    ELSE            reduce using rule 88 (simple_statement -> read_statement .)


state 57

    (89) simple_statement -> write_statement .

    ;               reduce using rule 89 (simple_statement -> write_statement .)
    END             reduce using rule 89 (simple_statement -> write_statement .)
    ELSE            reduce using rule 89 (simple_statement -> write_statement .)


state 58

    (110) structured_statement -> compound_statement .

    ;               reduce using rule 110 (structured_statement -> compound_statement .)
    END             reduce using rule 110 (structured_statement -> compound_statement .)
    ELSE            reduce using rule 110 (structured_statement -> compound_statement .)


state 59

    (111) structured_statement -> if_statement .

    ;               reduce using rule 111 (structured_statement -> if_statement .)
    END             reduce using rule 111 (structured_statement -> if_statement .)
    ELSE            reduce using rule 111 (structured_statement -> if_statement .)


state 60

    (112) structured_statement -> while_statement .

    ;               reduce using rule 112 (structured_statement -> while_statement .)
    END             reduce using rule 112 (structured_statement -> while_statement .)
    ELSE            reduce using rule 112 (structured_statement -> while_statement .)


state 61

    (113) structured_statement -> for_statement .

    ;               reduce using rule 113 (structured_statement -> for_statement .)
    END             reduce using rule 113 (structured_statement -> for_statement .)
    ELSE            reduce using rule 113 (structured_statement -> for_statement .)


state 62

    (84) labeled_statement -> INT . : statement

    :               shift and go to state 88


state 63

    (96) assignment_statement -> var_access . ASSIGN expr
    (44) var_access -> var_access . [ expr expr_sequence ]

    ASSIGN          shift and go to state 89
    [               shift and go to state 90


state 64

    (97) proc_statement -> ID . proc_id_cont
    (43) var_access -> ID .
    (98) proc_id_cont -> .
    (99) proc_id_cont -> . actual_param_list
    (100) actual_param_list -> . ( expr expr_sequence )

    ASSIGN          reduce using rule 43 (var_access -> ID .)
    [               reduce using rule 43 (var_access -> ID .)
    ;               reduce using rule 98 (proc_id_cont -> .)
    END             reduce using rule 98 (proc_id_cont -> .)
    ELSE            reduce using rule 98 (proc_id_cont -> .)
    (               shift and go to state 93

    proc_id_cont                   shift and go to state 91
    actual_param_list              shift and go to state 92

state 65

    (90) read_statement -> READ . read_param_list
    (101) read_param_list -> . ( var_access var_access_sequence )

    (               shift and go to state 95

    read_param_list                shift and go to state 94

state 66

    (91) read_statement -> READLN .
    (92) read_statement -> READLN . read_param_list
    (101) read_param_list -> . ( var_access var_access_sequence )

    ;               reduce using rule 91 (read_statement -> READLN .)
    END             reduce using rule 91 (read_statement -> READLN .)
    ELSE            reduce using rule 91 (read_statement -> READLN .)
    (               shift and go to state 95

    read_param_list                shift and go to state 96

state 67

    (93) write_statement -> WRITE . writeln_param_list
    (109) writeln_param_list -> . ( write_param write_param_sequence )

    (               shift and go to state 98

    writeln_param_list             shift and go to state 97

state 68

    (94) write_statement -> WRITELN .
    (95) write_statement -> WRITELN . writeln_param_list
    (109) writeln_param_list -> . ( write_param write_param_sequence )

    ;               reduce using rule 94 (write_statement -> WRITELN .)
    END             reduce using rule 94 (write_statement -> WRITELN .)
    ELSE            reduce using rule 94 (write_statement -> WRITELN .)
    (               shift and go to state 98

    writeln_param_list             shift and go to state 99

state 69

    (114) if_statement -> IF . expr THEN statement
    (115) if_statement -> IF . expr THEN statement ELSE statement
    (47) expr -> . simple_expr
    (48) expr -> . simple_expr relation_op simple_expr
    (49) simple_expr -> . term term_sequence
    (50) simple_expr -> . sign term term_sequence
    (51) term -> . factor factor_sequence
    (17) sign -> . +
    (18) sign -> . -
    (54) factor -> . var_access
    (55) factor -> . INT
    (56) factor -> . REAL
    (57) factor -> . CHAR
    (58) factor -> . STRING
    (59) factor -> . ID actual_param_list
    (60) factor -> . ( expr )
    (61) factor -> . NOT factor
    (43) var_access -> . ID
    (44) var_access -> . var_access [ expr expr_sequence ]

    +               shift and go to state 47
    -               shift and go to state 48
    INT             shift and go to state 106
    REAL            shift and go to state 107
    CHAR            shift and go to state 108
    STRING          shift and go to state 109
    ID              shift and go to state 110
    (               shift and go to state 111
    NOT             shift and go to state 112

    expr                           shift and go to state 100
    simple_expr                    shift and go to state 101
    term                           shift and go to state 102
    sign                           shift and go to state 103
    factor                         shift and go to state 104
    var_access                     shift and go to state 105

state 70

    (116) while_statement -> WHILE . expr DO statement
    (47) expr -> . simple_expr
    (48) expr -> . simple_expr relation_op simple_expr
    (49) simple_expr -> . term term_sequence
    (50) simple_expr -> . sign term term_sequence
    (51) term -> . factor factor_sequence
    (17) sign -> . +
    (18) sign -> . -
    (54) factor -> . var_access
    (55) factor -> . INT
    (56) factor -> . REAL
    (57) factor -> . CHAR
    (58) factor -> . STRING
    (59) factor -> . ID actual_param_list
    (60) factor -> . ( expr )
    (61) factor -> . NOT factor
    (43) var_access -> . ID
    (44) var_access -> . var_access [ expr expr_sequence ]

    +               shift and go to state 47
    -               shift and go to state 48
    INT             shift and go to state 106
    REAL            shift and go to state 107
    CHAR            shift and go to state 108
    STRING          shift and go to state 109
    ID              shift and go to state 110
    (               shift and go to state 111
    NOT             shift and go to state 112

    expr                           shift and go to state 113
    simple_expr                    shift and go to state 101
    term                           shift and go to state 102
    sign                           shift and go to state 103
    factor                         shift and go to state 104
    var_access                     shift and go to state 105

state 71

    (117) for_statement -> FOR . ID ASSIGN expr TO expr DO statement
    (118) for_statement -> FOR . ID ASSIGN expr DOWNTO expr DO statement

    ID              shift and go to state 114


state 72

    (10) var_dec_part -> VAR var_dec ; . vcont
    (11) vcont -> .
    (12) vcont -> . var_dec ; vcont
    (42) var_dec -> . id_list : tipo
    (33) id_list -> . ID
    (34) id_list -> . ID , id_list

    BEGIN           reduce using rule 11 (vcont -> .)
    ID              shift and go to state 14

    var_dec                        shift and go to state 115
    vcont                          shift and go to state 116
    id_list                        shift and go to state 33

state 73

    (42) var_dec -> id_list : . tipo
    (27) tipo -> . ID
    (28) tipo -> . new_type
    (29) new_type -> . enumerated_type
    (30) new_type -> . subrange_type
    (31) new_type -> . array_type
    (32) enumerated_type -> . ( id_list )
    (35) subrange_type -> . constant DOTDOT constant
    (36) array_type -> . ARRAY [ ordinal_type acont ] OF tipo
    (19) constant -> . sign INT
    (20) constant -> . INT
    (21) constant -> . sign REAL
    (22) constant -> . REAL
    (23) constant -> . ID
    (24) constant -> . sign ID
    (25) constant -> . CHAR
    (26) constant -> . STRING
    (17) sign -> . +
    (18) sign -> . -

    ID              shift and go to state 118
    (               shift and go to state 123
    ARRAY           shift and go to state 125
    INT             shift and go to state 43
    REAL            shift and go to state 44
    CHAR            shift and go to state 45
    STRING          shift and go to state 46
    +               shift and go to state 47
    -               shift and go to state 48
